--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 body {
+  /* background: url('../public/assets/background_image.jpg');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size:cover;
+  -o-background-size: cover; */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
