--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,24 @@
   width: 75px;
 }
 
+.edit-btn:hover {
+  background-color: #fccc88;
+}
+
 .delete-btn {
   background-color: #f54333;
   width: 75px;
+}
+
+.delete-btn:hover {
+  background-color: #f7938b;
+}
+
+.trail-img-sm {
+  height: 32vh;
+  min-height: 320px;
+  /* width: 100%; */
+  object-fit: cover;
 }
 
 body {
