--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,42 @@
+.home {
+  margin-top: 100px;
+}
+.box {
+  margin-top: 150px;
+  opacity: 0.35;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 1;
+  left: 0;
+}
+.bg-img {
+  width: 100%;
+}
+.box-overlay {
+  z-index: 9;
+  margin: 150px;
+}
 .submit-btn {
   background-color: #095479;
 }
-
+.submit-btn:hover {
+  background-color: #518fad;
+}
 .edit-btn {
   background-color: #f9ac42;
   width: 75px;
 }
-
 .edit-btn:hover {
   background-color: #fccc88;
 }
-
 .delete-btn {
   background-color: #f54333;
   width: 75px;
 }
-
 .delete-btn:hover {
   background-color: #f7938b;
 }
-
 .trail-img-sm {
   height: 32vh;
   min-height: 320px;
