--- a/src/index.css
+++ b/src/index.css
@@ -42,12 +42,10 @@
 }
 .trail-img-sm {
   width: 100%;
-  /* height: 25vw; */
-  /* height: auto; */
+  min-width: 300px;
   min-height: 310px;
-  /* object-fit: cover; */
+  object-fit: cover;
 }
-
 body {
   /* background: url('../public/assets/background_image.jpg');
   -webkit-background-size: cover;
