--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ body {
   -o-background-size: cover; */
 
   margin: 0;
+  background: #F8FAFC;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -65,4 +66,36 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  /* background-color: #FFF; */
+  background-clip: border-box;
+  border: 1px solid #EFF2F7;
+  border-radius: 0.375rem;
+}
+
+.auth-card {
+  padding: 20px; 
+}
+
+.form-control {
+  width: 100%;
+  height: calc(1.5em + 1.5rem + 2px);
+  padding: 0.75rem 1.25rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #8492A6;
+  background-color: #FFF;
+  background-clip: padding-box;
+  border: 1px solid #E0E6ED;
+  border-radius: 0.25rem;
+  box-shadow: inset 0 1px 1px rgb(31 45 61 / 8%);
+  transition: all 0.2s ease;
 }
