--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   z-index: 2;
   margin-bottom: 100px;
 }
-.submit-  {
+.submit-btn {
   background-color: #095479;
 }
 .submit-btn:hover {
@@ -54,7 +54,6 @@ body {
   -o-background-size: cover; */
 
   margin: 0;
-  /* background: #F8FAFC; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -66,72 +65,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
-  /* background-color: #FFF; */
-  background-clip: border-box;
-  border: 2px solid #EFF2F7;
-  border-radius: 0.375rem;
-}
-
-.auth-card {
-  padding: 20px; 
-}
-
-.form-control {
-  width: 100%;
-  height: calc(1.5em + 1.5rem + 2px);
-  padding: 0.75rem 1.25rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #8492A6;
-  background-color: #FFF;
-  background-clip: padding-box;
-  border: 1px solid #E0E6ED;
-  border-radius: 0.25rem;
-  box-shadow: inset 0 1px 1px rgb(31 45 61 / 8%);
-  transition: all 0.2s ease;
-}
-
-.uppercase {
-  text-transform: uppercase;
-}
-
-.bs-bg-primary {
-  background-color: #007bff !important;
-  border: 2px solid #0d6efd !important;
-  color: white !important;
-}
-
-.nav-links {
-  display: flex;
-  width: 100%;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.55);
-}
-
-.trail-nav-link {
-  text-decoration: none;
-  text-transform: capitalize;
-  color: rgba(0, 0, 0, 0.55);
-  font-weight: 700;
-}
-
-.bold {
-  font-weight: 700;
-}
-
-.no-decoration {
-  text-decoration: none;
 }
